[package]
name = "cache-map"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap.workspace = true
papaya.workspace = true
rayon.workspace = true
rand.workspace = true

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "contention"
harness = false